# OOP_API_SKYPRO_CW_MALYAROV

./: .gitignore  README.TXT  README.md  job.py  job_boards.py  job_files.py  main.py  pyproject.toml  vacancies.json
