[tool.poetry]
name = "oop-api-skypro-cw-malyarov"
version = "0.1.0"
description = ""
authors = ["Sergey Malyarov <sergey@malyaroff.com>"]
readme = "README.md"
packages = [{include = "oop_api_skypro_cw_malyarov"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

